--- a/eventPage.html
+++ b/eventPage.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Page | JCC</title>
-    <link rel="stylesheet" href="../styles/EventPageStyle.css">
+    <link rel="stylesheet" href="styles/EventPageStyle.css">
 </head>
 <body>
     <!-- header/ navbar -->
     <header>
         <div class="left">
             <a href="index.html">
-                <img src="../assets/logo JCC.png" alt="">
+                <img src="assets/logo JCC.png" alt="">
             </a>
 
             <ul class="navbar">
@@ -42,11 +42,11 @@
         <div class="right"> 
             <a href="contactUs.html" class="contactUs">Contact Us</a> 
 
-            <img src="../assets/hb_icon.png" class="hb">
+            <img src="assets/hb_icon.png" class="hb">
             
         </div>
 
-        <script src="../script/script.js"></script>
+        <script src="script/script.js"></script>
     </header>
 
     <!-- banner -->
@@ -67,16 +67,16 @@
         <div class="content">
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 3.png" alt="">
+                    <img src="assets/image 3.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>June 23 - 25, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>9:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Indonesia Comic Con</h1>
@@ -88,16 +88,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 13.png" alt="">
+                    <img src="assets/image 13.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>June 30 - July 2, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>10:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Mommy 'n Me 2023</h1>
@@ -110,16 +110,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 2.png" alt="">
+                    <img src="assets/image 2.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>August 14 - 17, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>9:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Jakarta x Beauty 2023</h1>
@@ -130,16 +130,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 13.png" alt="">
+                    <img src="assets/image 13.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>September 14 - 17, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>9:00 AM - 10:00 PM</span>
                     </div>
                     <h1>JIPREMIUM 2023</h1>
@@ -149,16 +149,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 1.png" alt="">
+                    <img src="assets/image 1.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>October 18 - 21, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>10:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Hospital Expo 2023</h1>
@@ -168,16 +168,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 6.png" alt="">
+                    <img src="assets/image 6.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>February 22 - 26, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>9:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Indonesia Fashion Week 2023</h1>
@@ -190,16 +190,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 8.png" alt="">
+                    <img src="assets/image 8.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>March 31 - April 02, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>9:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Indonesia Dream Wedding Festival 2023</h1>
@@ -210,16 +210,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 7.png" alt="">
+                    <img src="assets/image 7.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>April 05 - 09, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>10:00 AM - 10:00 PM</span>
                     </div>
                     <h1>ICRAFT 2023</h1>
@@ -232,16 +232,16 @@
 
             <div class="event">
                 <div class="background">
-                    <img src="../assets/image 5.png" alt="">
+                    <img src="assets/image 5.png" alt="">
                 </div>
 
                 <div class="caption1">
                     <div class="date">
-                        <img src="../assets/calender.png" alt="">
+                        <img src="assets/calender.png" alt="">
                         <span>June 1 - 4, 2023</span>
                     </div>
                     <div class="time">
-                        <img src="../assets/jam.png" alt="">
+                        <img src="assets/jam.png" alt="">
                         <span>10:00 AM - 10:00 PM</span>
                     </div>
                     <h1>Deep and Extreme Indonesia 2023</h1>
@@ -263,7 +263,7 @@
     <footer>
         <div class="atas">
             <div class="kiri">
-                <img src="../assets/logo JCC_footer.png" alt="">
+                <img src="assets/logo JCC_footer.png" alt="">
     
                 <div class="jcc">
                     <h1>JCC</h1>
@@ -312,10 +312,10 @@
             <div class="socmed">
                 <h1>SOCIAL MEDIA</h1>
                 <div class="logo">
-                    <img src="../assets/fb.png" alt="">
-                    <img src="../assets/twt.png" alt="">
-                    <img src="../assets/ling_edi.png" alt="">
-                    <img src="../assets/ig.png" alt="">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/twt.png" alt="">
+                    <img src="assets/ling_edi.png" alt="">
+                    <img src="assets/ig.png" alt="">
                 </div>
             </div>
         </div>
