--- a/eventPage.html
+++ b/eventPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Page | JCC</title>
-    <link rel="stylesheet" href="styles/EventPageStyle.css">
+    <link rel="stylesheet" href="../styles/EventPageStyle.css">
 </head>
 <body>
     <!-- header/ navbar -->
